--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "screen": "node ./src/scripts/screenshot.js",
+    "test": "jest",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -14,5 +15,9 @@
     "puppeteer": "^21.7.0",
     "react": "^18",
     "react-dom": "^18"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "jest-image-snapshot": "^6.4.0"
   }
 }
