--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "scripts": {
     "dev": "next dev",
     "screen": "node ./src/scripts/screenshot.js",
-    "test": "jest",
+    "test": "JEST_PUPPETEER_CONFIG=./src/tests/jest-puppeteer.config.js jest --config=./src/tests/jest.config.js",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "dotenv": "^16.3.1",
     "next": "14.0.4",
     "puppeteer": "^21.7.0",
     "react": "^18",
@@ -18,6 +19,7 @@
   },
   "devDependencies": {
     "jest": "^29.7.0",
-    "jest-image-snapshot": "^6.4.0"
+    "jest-image-snapshot": "^6.4.0",
+    "jest-puppeteer": "^9.0.2"
   }
 }
