--- a/.github/workflows/screenshot-actions.yml
+++ b/.github/workflows/screenshot-actions.yml
@@ -16,7 +16,15 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-
+      - name: CI Buildinh Caching
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.npm
+            ${{ github.workspace }}/.next/cache
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**/*.js', '**/*.jsx', '**/*.ts', '**/*.tsx') }}
+          restore-keys: |
+            ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
@@ -24,11 +32,7 @@ jobs:
           cache: 'npm'
       - name: Install Dependencies
         run: npm ci
-        env:
-          NODE_ENV: development
       - name: Build
         run: npm run build
       - name: Run Tests
         run: npm run test
-        env:
-          NODE_ENV: production
