--- a/.github/workflows/screenshot-actions.yml
+++ b/.github/workflows/screenshot-actions.yml
@@ -16,23 +16,26 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - name: CI Buildinh Caching
+
+      - name: CI Building Caching
         uses: actions/cache@v3
         with:
-          path: |
-            ~/.npm
-            ${{ github.workspace }}/.next/cache
+          path: ${{ github.workspace }}/.next/cache
           key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**/*.js', '**/*.jsx', '**/*.ts', '**/*.tsx') }}
           restore-keys: |
             ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-
+
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
+
       - name: Install Dependencies
         run: npm ci
+
       - name: Build
         run: npm run build
+
       - name: Run Tests
         run: npm run test
