--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "screen": "node ./src/scripts/screenshot.js",
     "test": "JEST_PUPPETEER_CONFIG=./src/tests/jest-puppeteer.config.js jest --config=./src/tests/jest.config.js --runInBand",
+    "test:update": "JEST_PUPPETEER_CONFIG=./src/tests/jest-puppeteer.config.js jest -u --config=./src/tests/jest.config.js --runInBand",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
