--- a/.github/workflows/screenshot-actions.yml
+++ b/.github/workflows/screenshot-actions.yml
@@ -4,6 +4,8 @@ run-name: Screenshot with visual regression test
 
 on:
   deployment_status:
+    branches:
+      - main
 
 jobs:
   test-screenshot:
