--- a/.github/workflows/screenshot-actions.yml
+++ b/.github/workflows/screenshot-actions.yml
@@ -14,6 +14,7 @@ jobs:
       matrix:
         node-version: ['18.x']
 
+    if: ${{ github.event.deployment_status.state == 'success' }}
     steps:
       - uses: actions/checkout@v4
 
