--- a/.github/workflows/screenshot-actions.yml
+++ b/.github/workflows/screenshot-actions.yml
@@ -7,12 +7,12 @@ on:
 
 jobs:
   test-screenshot:
+    if: ${{ github.event_name == 'deployment_status' && github.event.deployment_status.state == 'success' }}
     runs-on: ubuntu-latest
     strategy:
       matrix:
         node-version: ['18.x']
 
-    if: ${{ github.event.deployment_status.state == 'success' }}
     steps:
       - uses: actions/checkout@v4
 
