--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "screen": "node ./src/scripts/screenshot.js",
-    "test": "JEST_PUPPETEER_CONFIG=./src/tests/jest-puppeteer.config.js jest --config=./src/tests/jest.config.js --runInBand",
-    "test:update": "JEST_PUPPETEER_CONFIG=./src/tests/jest-puppeteer.config.js jest -u --config=./src/tests/jest.config.js --runInBand",
+    "test": "JEST_PUPPETEER_CONFIG=./src/tests/jest-puppeteer.config.js jest --runInBand --config=./src/tests/jest.config.js",
+    "test:update": "JEST_PUPPETEER_CONFIG=./src/tests/jest-puppeteer.config.js jest --runInBand -u --config=./src/tests/jest.config.js",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
