--- a/.github/workflows/screenshot-actions.yml
+++ b/.github/workflows/screenshot-actions.yml
@@ -54,7 +54,9 @@ jobs:
         run: npm run build
 
       - name: Run Tests
-        run: WEBSITE_URL=${{ (steps.await-vercel.outputs.deploymentDetails).url }} npm run test
+        env:
+          WEBSITE_URL: ${{ (steps.await-vercel.outputs.deploymentDetails).url }}
+        run: npm run test
 
       - name: Archive visual regression failures
         uses: actions/upload-artifact@v4
