--- a/.github/workflows/screenshot-actions.yml
+++ b/.github/workflows/screenshot-actions.yml
@@ -10,6 +10,7 @@ on:
 jobs:
   test-screenshot:
     runs-on: ubuntu-latest
+    environment: github-pages
     permissions:
       contents: write
     strategy:
