--- a/.github/workflows/screenshot-actions.yml
+++ b/.github/workflows/screenshot-actions.yml
@@ -37,8 +37,8 @@ jobs:
           -H "Accept: application/vnd.github+json" \
           -H "Authorization: Bearer ${{secrets.GITHUB_TOKEN}}" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
-          https://api.github.com/repositories/${{ github.repository_id }}/environments/github-pages/variables/${{ vars.WEBSITE_URL }} \
-          -d '{"name":"WEBSITE_URL","value":${{ fromJson(steps.await-vercel.outputs.deploymentDetails).url }}}'
+          https://api.github.com/repositories/${{ github.repository_id }}/environments/github-pages/variables/WEBSITE_URL \
+          -d '{"name":"WEBSITE_URL","value":"https://${{ fromJson(steps.await-vercel.outputs.deploymentDetails).url }}"}'
 
       - name: Update .env file
         run: echo "${{ vars.WEBSITE_URL }}" > .env
