--- a/.github/workflows/screenshot-actions.yml
+++ b/.github/workflows/screenshot-actions.yml
@@ -9,9 +9,9 @@ on:
 
 jobs:
   test-screenshot:
+    permissions: write-all
     runs-on: ubuntu-latest
     environment: github-pages
-    permissions: write-all
     strategy:
       matrix:
         node-version: ['18.x']
@@ -29,12 +29,12 @@ jobs:
       - name: Displays the deployment name
         run: 'echo The deployment at ${{ fromJson(steps.await-vercel.outputs.deploymentDetails).url }} is ${{ fromJson(steps.await-vercel.outputs.deploymentDetails).readyState }}'
 
-      - name: Get variable environment
+      - name: Update variable environment
         run: |
           curl -L \
           -X PATCH \
           -H "Accept: application/vnd.github+json" \
-          -H "Authorization: Bearer ${{secrets.GITHUB_TOKEN}}" \
+          -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
           https://api.github.com/repositories/${{ github.repository_id }}/environments/github-pages/variables/WEBSITE_URL \
           -d '{"name":"WEBSITE_URL","value":"https://${{ fromJson(steps.await-vercel.outputs.deploymentDetails).url }}"}'
