--- a/.github/workflows/screenshot-actions.yml
+++ b/.github/workflows/screenshot-actions.yml
@@ -9,7 +9,6 @@ on:
 
 jobs:
   test-screenshot:
-    permissions: write-all
     runs-on: ubuntu-latest
     environment: github-pages
     strategy:
@@ -34,7 +33,7 @@ jobs:
           curl -L \
           -X PATCH \
           -H "Accept: application/vnd.github+json" \
-          -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+          -H "Authorization: Bearer ${{ secrets.PAT_TOKEN }}" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
           https://api.github.com/repositories/${{ github.repository_id }}/environments/github-pages/variables/WEBSITE_URL \
           -d '{"name":"WEBSITE_URL","value":"https://${{ fromJson(steps.await-vercel.outputs.deploymentDetails).url }}"}'
