--- a/.github/workflows/screenshot-actions.yml
+++ b/.github/workflows/screenshot-actions.yml
@@ -9,6 +9,7 @@ on:
 
 jobs:
   test-screenshot:
+    permissions: write-all
     runs-on: ubuntu-latest
     environment: github-pages
     strategy:
